tests/src/frontend/syntax/invalid/for_c_4.sk
fun main(): void {
  for (const i = 0; i < 10; ++i) {
    void
  };
}
